src/objects/acpl__AP_Period__c.object
<CustomObject>
    <fields>
        <fullName>acpl__gf_ap_close_date_msg_desc__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>End Date Notification</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>acpl__gf_ap_edit_end_date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>End date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>acpl__gf_ap_edit_start_date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>acpl__gf_ap_next_date_msg_desc__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Notification message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>acpl__gf_ap_notfn_next_close_date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Notification date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>acpl__gf_ap_priority_edit_type__c</fullName>
        <label>Account Planning Wave</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>acpl__gf_ap_start_date_msg_desc__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Start Date Notification</label>
        <type>TextArea</type>
    </fields>
    <label>Period</label>
    <listViews>
        <fullName>acpl__All</fullName>
        <columns>NAME</columns>
        <columns>acpl__gf_ap_priority_edit_type__c</columns>
        <columns>acpl__gf_ap_edit_start_date__c</columns>
        <columns>acpl__gf_ap_edit_end_date__c</columns>
        <columns>acpl__gf_ap_notfn_next_close_date__c</columns>
        <columns>acpl__gf_ap_next_date_msg_desc__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>APConf-{0000}</displayFormat>
        <label>Account Planning Configuration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Periods</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>